<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddExpenseActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="85dp" />

        <!-- Header label -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/add_new_expense_label"
            android:textColor="#E91E63"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <!-- Expense Date -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/selectDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/select_date"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView">
            <!--https://stackoverflow.com/questions/14933330/datepicker-how-to-popup-datepicker-when-click-on-edittext-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expenseDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Expense Category -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expenseCategoryMenu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/select_category"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectDate">
            <AutoCompleteTextView
                android:id="@+id/expenseCategoryAutocompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Expense Amount -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expenseAmountTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/amount"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenseCategoryMenu"
            app:startIconDrawable="@drawable/ic_dollar">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expenseAmountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Expense Description -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expenseDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenseAmountTextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expenseDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Reset Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonReset"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:text="@string/reset"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSaveExpense"
            app:layout_constraintEnd_toStartOf="@+id/buttonSaveExpense"
            app:layout_constraintTop_toTopOf="@+id/buttonSaveExpense"
            app:layout_constraintVertical_bias="0.0" />

        <!-- Save Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSaveExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="52dp"
            android:text="@string/save"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="#4CAF50"
            app:layout_constraintEnd_toEndOf="@+id/expenseDescription"
            app:layout_constraintTop_toBottomOf="@+id/expenseDescription" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/saveExpenseRecordProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>